--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
             p {
                 font-size: 3rem;
                 color: white;
+                animation: fadeInOut 2.8s infinite;
             }
             .highlight {
                 color: #1a00eb;
+            }
+            @keyframes fadeInOut {
+                0% { opacity: 0; }
+                10.7% { opacity: 1; } /* 0.3s / 2.8s = 10.7% */
+                82.1% { opacity: 1; } /* (2.8s - 0.5s) / 2.8s = 82.1% */
+                100% { opacity: 0; }
             }
         </style>
     </head>
