--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
         <style>
             body {
                 background-color: #151516;
@@ -9,7 +9,7 @@
                 align-items: center;
                 height: 100vh;
                 margin: 0;
-                font-family: 'Work Sans', sans-serif;
+                font-family: 'Montserrat', sans-serif;
                 font-weight: 300;
             }
             p {
