new website update

--- a/get-demo.html
+++ b/get-demo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 11:04:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 13:41:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6787d6c13924b11f36ae971e" data-wf-site="6787d6c13924b11f36ae96c4" lang="en">
 <head>
   <meta charset="utf-8">
@@ -224,7 +224,7 @@ margin: 0rem !important;
               <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
             <div class="navbar_menu-right">
-              <a href="get-demo.html" aria-current="page" class="button-icon w-inline-block w--current">
+              <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
                 <div class="icon-user_embed w-embed">
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
@@ -286,7 +286,6 @@ margin: 0rem !important;
             <a href="index.html" class="footer_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
           </div>
         </div>
-        <div class="line-divider background-color-white"></div>
         <div class="footer_bottom-wrapper">
           <div class="footer_credit-text">Lognos / Southen partnership 2025</div>
           <div class="w-layout-grid footer_legal-list">
