--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 11:04:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 13:41:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6787d6c13924b11f36ae9715" data-wf-site="6787d6c13924b11f36ae96c4" lang="en">
 <head>
   <meta charset="utf-8">
@@ -224,7 +224,7 @@ margin: 0rem !important;
               <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
             <div class="navbar_menu-right">
-              <a href="get-demo.html" class="button-icon w-inline-block">
+              <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
                 <div class="icon-user_embed w-embed">
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
@@ -261,33 +261,16 @@ margin: 0rem !important;
         <div class="w-layout-blockcontainer padding-global padding-section-large w-container">
           <div class="smallhero_wrapper">
             <div class="smallhero_text">
-              <h1 class="smallhero_header">A plan for every project need.</h1>
+              <h1 data-w-id="15584f02-187b-1d09-5d99-e64fcbe0b3c3" style="opacity:0" class="smallhero_header-product">A plan for every project size.</h1>
             </div>
           </div>
+          <div data-w-id="dfa05936-94b7-d8f1-69db-76a2170eb852" style="opacity:0" class="text-size-regular">Choose the plan that better fits your project risk management needs. Our pricing scales with your team size and complexity, providing the essential tools to effectively track, analyze, and mitigate risks throughout your project lifecycle.</div>
         </div>
       </section>
       <section class="section_pricing">
         <div class="w-layout-blockcontainer padding-global padding-section-bottom w-container">
           <div class="pricing_wrapper">
-            <div class="pricing_tile">
-              <div class="icon-rect-medium">
-                <div class="icon-large w-embed">
-                  <?xml version="1.0" encoding="UTF-8"?>
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 32 32">
-                    <defs>
-                      <style>
-      .cls-1 {
-        fill: currentcolor;
-        stroke-width: 0px;
-      }
-    </style>
-                    </defs>
-                    <path class="cls-1" d="m11.05,11.05c.65-.64,1.39-1.15,2.23-1.5L9.77,1.26c-1.91.81-3.62,1.96-5.08,3.43-1.47,1.47-2.62,3.18-3.43,5.08l8.29,3.51c.35-.83.86-1.58,1.5-2.23Z"></path>
-                    <path class="cls-1" d="m11.05,20.95c-.64-.65-1.15-1.39-1.5-2.22-.36-.86-.55-1.78-.55-2.73H0c0,2.16.42,4.25,1.26,6.23.81,1.91,1.96,3.62,3.43,5.08,1.47,1.47,3.18,2.62,5.08,3.43,1.97.83,4.07,1.26,6.23,1.26v-9c-.95,0-1.86-.18-2.72-.55-.83-.35-1.58-.86-2.23-1.5Z"></path>
-                    <path class="cls-1" d="m30.74,9.77c-.81-1.91-1.96-3.62-3.43-5.08-1.47-1.47-3.18-2.62-5.08-3.43C20.25.42,18.16,0,16,0v9c.95,0,1.86.18,2.72.55.83.35,1.58.86,2.23,1.5.64.65,1.15,1.39,1.5,2.22.36.86.55,1.78.55,2.72s-.18,1.86-.55,2.72c-.35.83-.86,1.58-1.5,2.23-.65.64-1.39,1.15-2.23,1.5l3.51,8.29c1.91-.81,3.62-1.96,5.08-3.43,1.47-1.47,2.62-3.18,3.43-5.09.83-1.98,1.26-4.07,1.26-6.23s-.42-4.25-1.26-6.23Z"></path>
-                  </svg>
-                </div>
-              </div>
+            <div data-w-id="778a5150-7d3b-80b8-5555-7319308a2788" style="opacity:0" class="pricing_tile">
               <div class="pricing_title">
                 <h2 class="heading-style-h4">Starter</h2>
                 <div class="pricing_price">
@@ -342,26 +325,8 @@ margin: 0rem !important;
               </div>
             </div>
             <div class="pricing_tile is-highlighted">
-              <div class="icon-rect-medium">
-                <div class="icon-large w-embed">
-                  <?xml version="1.0" encoding="UTF-8"?>
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 32 32">
-                    <defs>
-                      <style>
-      .cls-1 {
-        fill: currentcolor;
-        stroke-width: 0px;
-      }
-    </style>
-                    </defs>
-                    <path class="cls-1" d="m11.05,11.05c.65-.64,1.39-1.15,2.23-1.5L9.77,1.26c-1.91.81-3.62,1.96-5.08,3.43-1.47,1.47-2.62,3.18-3.43,5.08l8.29,3.51c.35-.83.86-1.58,1.5-2.23Z"></path>
-                    <path class="cls-1" d="m11.05,20.95c-.64-.65-1.15-1.39-1.5-2.22-.36-.86-.55-1.78-.55-2.73H0c0,2.16.42,4.25,1.26,6.23.81,1.91,1.96,3.62,3.43,5.08,1.47,1.47,3.18,2.62,5.08,3.43,1.97.83,4.07,1.26,6.23,1.26v-9c-.95,0-1.86-.18-2.72-.55-.83-.35-1.58-.86-2.23-1.5Z"></path>
-                    <path class="cls-1" d="m30.74,9.77c-.81-1.91-1.96-3.62-3.43-5.08-1.47-1.47-3.18-2.62-5.08-3.43C20.25.42,18.16,0,16,0v9c.95,0,1.86.18,2.72.55.83.35,1.58.86,2.23,1.5.64.65,1.15,1.39,1.5,2.22.36.86.55,1.78.55,2.72s-.18,1.86-.55,2.72c-.35.83-.86,1.58-1.5,2.23-.65.64-1.39,1.15-2.23,1.5l3.51,8.29c1.91-.81,3.62-1.96,5.08-3.43,1.47-1.47,2.62-3.18,3.43-5.09.83-1.98,1.26-4.07,1.26-6.23s-.42-4.25-1.26-6.23Z"></path>
-                  </svg>
-                </div>
-              </div>
               <div class="pricing_title">
-                <h2 class="heading-style-h4">Small projects starting</h2>
+                <h2 class="heading-style-h4-dark">Small projects</h2>
                 <div class="pricing_price">
                   <h3 class="heading-style-h3">$100/mo <span class="text-span-4">per user</span></h3>
                 </div>
@@ -419,25 +384,7 @@ margin: 0rem !important;
                 </div>
               </div>
             </div>
-            <div class="pricing_tile">
-              <div class="icon-rect-medium">
-                <div class="icon-large w-embed">
-                  <?xml version="1.0" encoding="UTF-8"?>
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 32 32">
-                    <defs>
-                      <style>
-      .cls-1 {
-        fill: currentcolor;
-        stroke-width: 0px;
-      }
-    </style>
-                    </defs>
-                    <path class="cls-1" d="m11.05,11.05c.65-.64,1.39-1.15,2.23-1.5L9.77,1.26c-1.91.81-3.62,1.96-5.08,3.43-1.47,1.47-2.62,3.18-3.43,5.08l8.29,3.51c.35-.83.86-1.58,1.5-2.23Z"></path>
-                    <path class="cls-1" d="m11.05,20.95c-.64-.65-1.15-1.39-1.5-2.22-.36-.86-.55-1.78-.55-2.73H0c0,2.16.42,4.25,1.26,6.23.81,1.91,1.96,3.62,3.43,5.08,1.47,1.47,3.18,2.62,5.08,3.43,1.97.83,4.07,1.26,6.23,1.26v-9c-.95,0-1.86-.18-2.72-.55-.83-.35-1.58-.86-2.23-1.5Z"></path>
-                    <path class="cls-1" d="m30.74,9.77c-.81-1.91-1.96-3.62-3.43-5.08-1.47-1.47-3.18-2.62-5.08-3.43C20.25.42,18.16,0,16,0v9c.95,0,1.86.18,2.72.55.83.35,1.58.86,2.23,1.5.64.65,1.15,1.39,1.5,2.22.36.86.55,1.78.55,2.72s-.18,1.86-.55,2.72c-.35.83-.86,1.58-1.5,2.23-.65.64-1.39,1.15-2.23,1.5l3.51,8.29c1.91-.81,3.62-1.96,5.08-3.43,1.47-1.47,2.62-3.18,3.43-5.09.83-1.98,1.26-4.07,1.26-6.23s-.42-4.25-1.26-6.23Z"></path>
-                  </svg>
-                </div>
-              </div>
+            <div data-w-id="1cb5064a-bb36-8cbb-6514-975b88745c81" style="opacity:0" class="pricing_tile">
               <div class="pricing_title">
                 <h2 class="heading-style-h4">Enterprice</h2>
                 <div class="pricing_price">
@@ -514,7 +461,6 @@ margin: 0rem !important;
             <a href="index.html" class="footer_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
           </div>
         </div>
-        <div class="line-divider background-color-white"></div>
         <div class="footer_bottom-wrapper">
           <div class="footer_credit-text">Lognos / Southen partnership 2025</div>
           <div class="w-layout-grid footer_legal-list">
