--- a/utility-pages/terms-and-conditions.html
+++ b/utility-pages/terms-and-conditions.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 11:04:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 28 2025 13:41:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6787d6c13924b11f36ae971c" data-wf-site="6787d6c13924b11f36ae96c4" lang="en">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
                 <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
               </div>
               <div class="navbar_menu-right">
-                <a href="../get-demo.html" class="button-icon w-inline-block">
+                <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
                   <div class="icon-user_embed w-embed">
                     <?xml version="1.0" encoding="UTF-8"?>
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
