prduct video update

--- a/product.html
+++ b/product.html
@@ -215,12 +215,12 @@ margin: 0rem !important;
     <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="cb586d45-c780-7d3c-8cfb-0ef259a07291" role="banner" data-duration="400">
       <div class="w-layout-blockcontainer padding-global w-container">
         <div class="navbar_container">
-          <a href="index.html" class="navbar_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" height="Auto" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" class="navbar_logo"></a>
+          <a href="/" class="navbar_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" height="Auto" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" class="navbar_logo"></a>
           <nav role="navigation" class="navbar_menu w-nav-menu">
             <div class="navbar_menu-left">
-              <a href="index.html" class="navbar_link w-nav-link">Home</a>
-              <a href="product.html" aria-current="page" class="navbar_link w-nav-link w--current">Product</a>
-              <a href="pricing.html" class="navbar_link w-nav-link">Pricing</a>
+              <a href="/" class="navbar_link w-nav-link">Home</a>
+              <a href="/product" aria-current="page" class="navbar_link w-nav-link w--current">Product</a>
+              <a href="/pricing" class="navbar_link w-nav-link">Pricing</a>
               <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
             <div class="navbar_menu-right">
@@ -241,7 +241,7 @@ margin: 0rem !important;
                   </svg>
                 </div>
               </a>
-              <a href="pricing.html" class="button is-secondary is-small w-button">Get started</a>
+              <a href="/pricing" class="button is-secondary is-small w-button">Get started</a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
@@ -262,12 +262,12 @@ margin: 0rem !important;
           <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="subhero_wrapper">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subhero_column">
               <div class="subhero_text">
-                <h1 class="heading-style-h2"><span class="text-span-6">AI assisted</span> Quantitative<span class="text-color-highlighted"> risk management.</span></h1>
+                <h1 class="heading-style-h2"><span class="text-span-6">AI assisted</span> Quantitative<span class="text-color-highlighted"> risk management.</span></h1>
                 <div class="subhero_text-paragraph">
                   <p class="paragraph-7">Agentic workflows processes your information and data. Your team focuses on executing.</p>
                 </div>
                 <div class="button-group">
-                  <a href="pricing.html" class="button is-icon w-inline-block">
+                  <a href="/pricing" class="button is-icon w-inline-block">
                     <div class="text-weight-semibold text-size-regular">Get started</div>
                     <div class="icon-embed-xsmall w-embed">
                       <?xml version="1.0" encoding="UTF-8"?>
@@ -291,7 +291,7 @@ margin: 0rem !important;
             </div>
             <div data-w-id="5107a480-0949-4a15-6ed4-4f5c07d0eb49" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subhero_column">
               <div class="w-layout-blockcontainer container w-container">
-                <div style="padding-top:75%" class="video w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.loom.com%2Fembed%2F8a03112ee0474cbd8ee40990cbb2b1aa&display_name=Loom&url=https%3A%2F%2Fwww.loom.com%2Fshare%2F8a03112ee0474cbd8ee40990cbb2b1aa%3Fsid%3Dd6343c3c-8291-41fa-90df-5515fa233526&image=https%3A%2F%2Fcdn.loom.com%2Fsessions%2Fthumbnails%2F8a03112ee0474cbd8ee40990cbb2b1aa-35e3c0a21fcad922.gif&type=text%2Fhtml&schema=loom" width="940" height="705" scrolling="no" allowfullscreen="" title="lognos_intro"></iframe></div>
+                <div style="padding-top:75%" class="video w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.loom.com%2Fembed%2Fad93f0f67769494d9838d11ee45a84f6&display_name=Loom&url=https%3A%2F%2Fwww.loom.com%2Fshare%2Fad93f0f67769494d9838d11ee45a84f6%3Fsid%3D887ba8df-86b7-4bc3-b7e7-0b4f75f53869&image=https%3A%2F%2Fcdn.loom.com%2Fsessions%2Fthumbnails%2Fad93f0f67769494d9838d11ee45a84f6-d19bb982076d2f63.gif&type=text%2Fhtml&schema=loom" width="940" height="705" scrolling="no" allowfullscreen="" title="lognos_intro_update"></iframe></div>
               </div>
             </div>
           </div>
@@ -310,15 +310,15 @@ margin: 0rem !important;
       <div class="w-layout-blockcontainer padding-global padding-section-medium w-container">
         <div class="w-layout-grid footer_top-wrapper">
           <div class="footer_left-wrapper">
-            <a href="index.html" class="footer_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
+            <a href="/" class="footer_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
           </div>
         </div>
         <div class="footer_bottom-wrapper">
           <div class="footer_credit-text">Lognos / Southen partnership 2025</div>
           <div class="w-layout-grid footer_legal-list">
-            <a href="utility-pages/style-guide.html" class="footer_legal-link">Privacy Policy</a>
-            <a href="utility-pages/terms-and-conditions.html" class="footer_legal-link">Terms of Service</a>
-            <a href="index.html" class="footer_legal-link">Cookies Settings</a>
+            <a href="/utility-pages/style-guide" class="footer_legal-link">Privacy Policy</a>
+            <a href="/utility-pages/terms-and-conditions" class="footer_legal-link">Terms of Service</a>
+            <a href="/" class="footer_legal-link">Cookies Settings</a>
           </div>
         </div>
       </div>
@@ -328,3 +328,4 @@ margin: 0rem !important;
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
 </html>
+
