--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." name="description">
   <meta content="LOGNOS - Contact | AI Manager for project risks" property="og:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="og:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="og:image">
   <meta content="LOGNOS - Contact | AI Manager for project risks" property="twitter:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="twitter:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
