--- a/utility-pages/instructions.html
+++ b/utility-pages/instructions.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>Instructions</title>
   <meta content="Instructions" property="og:title">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="og:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="og:image">
   <meta content="Instructions" property="twitter:title">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="twitter:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="twitter:image">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
