--- a/utility-pages/starter-page.html
+++ b/utility-pages/starter-page.html
@@ -6,10 +6,10 @@
   <meta content="Explore new ways to manage your team and enjoy the hassle-free time management." name="description">
   <meta content="Starter page" property="og:title">
   <meta content="Explore new ways to manage your team and enjoy the hassle-free time management." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="og:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="og:image">
   <meta content="Starter page" property="twitter:title">
   <meta content="Explore new ways to manage your team and enjoy the hassle-free time management." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/663249e88f740b1eb4ae9a5a/66479a0c2185ebe0c620421c_og.png" property="twitter:image">
+  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
