--- a/pricing.html
+++ b/pricing.html
@@ -462,11 +462,11 @@ margin: 0rem !important;
           </div>
         </div>
         <div class="footer_bottom-wrapper">
-          <div class="footer_credit-text">Lognos / Southen partnership 2025</div>
+          <div class="footer_credit-text">© 2025 Lognos Inc. All rights reserved. 15 Mcmurrich St., Toronto, ON. M5R3M6.</div>
           <div class="w-layout-grid footer_legal-list">
             <a href="utility-pages/style-guide.html" class="footer_legal-link">Privacy Policy</a>
             <a href="utility-pages/terms-and-conditions.html" class="footer_legal-link">Terms of Service</a>
-            <a href="index.html" class="footer_legal-link">Cookies Settings</a>
+            <a href="index.html" class="footer_legal-link">Cookies Settings</a> 
           </div>
         </div>
       </div>
