--- a/product.html
+++ b/product.html
@@ -6,10 +6,10 @@
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." name="description">
   <meta content="LOGNOS - Product | AI Manager for project risks" property="og:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="og:description">
-  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="og:image">
+  <meta content="https://lognos.io/images/lognos_dash.png" property="og:image">
   <meta content="LOGNOS - Product | AI Manager for project risks" property="twitter:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="twitter:description">
-  <meta content="https://github.com/lognos/lognos.github.io/blob/main/images/lognos_dash.png" property="twitter:image">
+  <meta content="https://lognos.io/images/lognos_dash.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
