product page adjustment

--- a/product.html
+++ b/product.html
@@ -269,29 +269,12 @@ margin: 0rem !important;
           <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="subhero_wrapper">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subhero_column">
               <div class="subhero_text">
-                <h1 class="heading-style-h2"><span class="text-span-6">AI assisted</span> Quantitative<span class="text-color-highlighted"> risk management.</span></h1>
+                <h1 class="heading-style-h2"> <span class="text-span-6">An AI agent</span> <span class="text-color-highlighted"> in the background</span></h1>
                 <div class="subhero_text-paragraph">
                   <p class="paragraph-7">Agentic workflows processes your information and data. Your team focuses on executing.</p>
                 </div>
                 <div class="button-group">
-                  <a href="/pricing" class="button is-icon w-inline-block">
-                    <div class="text-weight-semibold text-size-regular">Get started</div>
-                    <div class="icon-embed-xsmall w-embed">
-                      <?xml version="1.0" encoding="UTF-8"?>
-                      <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 16 16">
-                        <defs>
-                          <style>
-      .cls-1 {
-        fill: currentcolor;
-        stroke-width: 0px;
-      }
-    </style>
-                        </defs>
-                        <polygon class="cls-1" points="8.35 15.35 7.65 14.65 14.29 8 7.65 1.35 8.35 .65 15.71 8 8.35 15.35">
-                        <rect class="cls-1" x="1" y="7.5" width="14" height="1"></rect>
-                      </polygon></svg>
-                    </div>
-                  </a>
+                  
                   <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
                 </div>
               </div>
