--- a/index.html
+++ b/index.html
@@ -65,17 +65,65 @@
   align-items: center;
 }
 
-/* Mobile video styles - override inline styles */
+/* Mobile video styles - maximize video size on mobile */
 @media screen and (max-width: 767px) {
+  .hero_wrapper-main-video {
+    padding: 0.5rem 0rem 0rem !important;
+    min-height: 90vh !important;
+  }
+  
   .hero_image-wrapper-home-video {
-    min-height: 450px !important;
-    margin-bottom: 2rem !important;
+    min-height: 70vh !important;
+    margin-bottom: 0rem !important;
+    height: 70vh !important;
   }
   
   .video-accelerated-hero {
     width: 100% !important;
-    height: auto !important;
-    max-width: 100% !important;
+    height: 70vh !important;
+    max-width: 100vw !important;
+    max-height: 70vh !important;
+    object-fit: cover !important;
+  }
+  
+  .hero_column-wrapper {
+    margin-bottom: 0.5rem !important;
+  }
+  
+  /* Remove container side padding for full width video */
+  .w-layout-blockcontainer.padding-global.padding-section-hero {
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .hero_wrapper-main-video {
+    padding: 0.25rem 0rem 0rem !important;
+    min-height: 85vh !important;
+  }
+  
+  .hero_image-wrapper-home-video {
+    min-height: 65vh !important;
+    margin-bottom: 0rem !important;
+    height: 65vh !important;
+  }
+  
+  .video-accelerated-hero {
+    width: 100% !important;
+    height: 65vh !important;
+    max-width: 100vw !important;
+    max-height: 65vh !important;
+    object-fit: cover !important;
+  }
+  
+  .hero_column-wrapper {
+    margin-bottom: 0.25rem !important;
+  }
+  
+  .w-layout-blockcontainer.padding-global.padding-section-hero {
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
   }
 }
 </style>
@@ -307,8 +355,8 @@ margin: 0rem !important;
     <main class="main-wrapper">
       <section class="section_hero">
         <div class="w-layout-blockcontainer padding-global padding-section-hero w-container">
-          <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper-main-video" style="padding: 2rem 4.8rem 1rem; min-height: 50vh;">
-            <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" class="hero_column-wrapper" style="margin-bottom: 1rem;">
+          <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper-main-video">
+            <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" class="hero_column-wrapper">
               <div class="hero_text">
                 <h1 class="heading-3"><span class="text-color-highlighted">AI Agents </span> for project <span class="text-color-highlighted">risks management.</span></h1>
                 
@@ -318,7 +366,7 @@ margin: 0rem !important;
                 <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
               </div>
             </div>
-            <div class="hero_image-wrapper-home-video" style="min-height: 400px; margin-bottom: 2rem;">
+            <div class="hero_image-wrapper-home-video">
               <video 
                 class="video-accelerated-hero" 
                 autoplay 
