--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 @media screen and (max-width: 767px) {
   .hero_wrapper-main-video {
     padding: 0.25rem 0.15rem 0.15rem !important;
-    min-height: 85vh !important;
+    min-height: 60vh !important;
   }
   
   .hero_image-wrapper-home-video {
@@ -104,7 +104,7 @@
 @media screen and (max-width: 479px) {
   .hero_wrapper-main-video {
     padding: 0.15rem 0.1rem 0.1rem !important;
-    min-height: 10vh !important;
+    min-height: 40vh !important;
   }
   
   .hero_image-wrapper-home-video {
@@ -363,13 +363,13 @@ margin: 0rem !important;
         <div class="w-layout-blockcontainer padding-global padding-section-hero w-container">
           <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper-main-video">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" class="hero_column-wrapper">
-              <div class="hero_text">
+              <div class="hero_text" style="margin-left: 1rem; margin-right: 1rem;">
                 <h1 class="heading-3"><span class="text-color-highlighted">AI Agents </span> for project <span class="text-color-highlighted">risks management.</span></h1>
                 
               </div>
-              <div class="button-group">
+              <div class="button-group"">
 
-                <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
+                <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button" style="margin-left: 1rem; margin-right: 1rem;">Book a demo</a>
               </div>
             </div>
             <div class="hero_image-wrapper-home-video">
