--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/lognos-logo.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -69,23 +70,23 @@
 @media screen and (max-width: 767px) {
   .hero_wrapper-main-video {
     padding: 0.25rem 0.15rem 0.15rem !important;
-    min-height: 60vh !important;
+    min-height: 10vh !important;
   }
   
   .hero_image-wrapper-home-video {
     min-height: 60vh !important;
     margin-bottom: 0.5rem !important;
     height: 60vh !important;
-    padding: 0.1rem !important;
+    padding: 0.5rem !important;
     width: 100% !important;
   }
   
   .video-accelerated-hero {
     width: 100% !important;
-    height: 60vh !important;
+    height: 100% !important;
     max-width: 100% !important;
     max-height: 30vh !important;
-    object-fit: cover !important;
+    object-fit: fill !important;
     object-position: center !important;
     border-radius: 0.5rem !important;
   }
@@ -117,10 +118,10 @@
   
   .video-accelerated-hero {
     width: 100% !important;
-    height: 55vh !important;
+    height: 100% !important;
     max-width: 100% !important;
     max-height: 30vh !important;
-    object-fit: cover !important;
+    object-fit: fill !important;
     object-position: center !important;
     border-radius: 0.4rem !important;
   }
@@ -317,7 +318,14 @@ margin: 0rem !important;
     <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="cb586d45-c780-7d3c-8cfb-0ef259a07291" role="banner" data-duration="400">
       <div class="w-layout-blockcontainer padding-global w-container">
         <div class="navbar_container">
-          <a href="index.html" aria-current="page" class="navbar_logo-link w-nav-brand w--current"><img src="images/lognos_logo_01.png" loading="lazy" height="Auto" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" class="navbar_logo"></a>
+          <a href="index.html" aria-current="page" class="navbar_logo-link w-nav-brand w--current">
+            <div class="lognos-logo navbar_logo">
+              <svg class="lognos-logo-circle" viewBox="0 0 24 24" fill="none" stroke="#3B82F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10"/>
+              </svg>
+              <span class="lognos-logo-text">lognos</span>
+            </div>
+          </a>
           <nav role="navigation" class="navbar_menu w-nav-menu">
             <div class="navbar_menu-left">
               <a href="index.html" aria-current="page" class="navbar_link w-nav-link w--current">Home</a>
@@ -379,7 +387,7 @@ margin: 0rem !important;
                 muted 
                 loop 
                 playsinline
-                poster="images/qra_dashboard.png"
+                poster="images/vid_preload.png"
                 data-w-id="d4ef5b87-80d7-9065-c7c1-de7060683e41"
                 onloadstart="console.log('Video load started'); this.playbackRate = 3.0;"
                 oncanplay="console.log('Video can play'); this.playbackRate = 3.0;"
@@ -387,7 +395,7 @@ margin: 0rem !important;
                 onerror="console.log('Video error:', this.error)">
                 <source src="images/lognos_home.mp4" type="video/mp4">
                 <source src="lognos_home.mp4" type="video/mp4">
-                <img src="images/qra_dashboard.png" alt="Lognos Dashboard" style="width: 100%; height: auto;">
+                <img src="images/vid_preload.png" alt="Lognos Dashboard" style="width: 100%; height: auto;">
               </video>
               
             </div>
@@ -572,7 +580,14 @@ margin: 0rem !important;
       <div class="w-layout-blockcontainer padding-global padding-section-medium w-container">
         <div class="w-layout-grid footer_top-wrapper">
           <div class="footer_left-wrapper">
-            <a href="index.html" aria-current="page" class="footer_logo-link w-nav-brand w--current"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
+            <a href="index.html" aria-current="page" class="footer_logo-link w-nav-brand w--current">
+              <div class="lognos-logo footer_logo-image">
+                <svg class="lognos-logo-circle" viewBox="0 0 24 24" fill="none" stroke="#3B82F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <circle cx="12" cy="12" r="10"/>
+                </svg>
+                <span class="lognos-logo-text">lognos</span>
+              </div>
+            </a>
           </div>
         </div>
         <div class="footer_bottom-wrapper">
