--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." name="description">
   <meta content="LOGNOS - Product | AI Manager for project risks" property="og:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="og:description">
-  <meta content="https://lognos.io/images/lognos_dash.png" property="og:image">
+  <meta content="https://lognos.io/images/circle_favicon.png" property="og:image">
   <meta content="LOGNOS - Product | AI Manager for project risks" property="twitter:title">
   <meta content="LOGNOS turns project information into quantitative risk forecasts and decisive action. Our Agent helps you manage it." property="twitter:description">
   <meta content="https://lognos.io/images/circle_favicon.png" property="twitter:image">
@@ -16,6 +16,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/lognos-logo.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -222,7 +223,14 @@ margin: 0rem !important;
     <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="cb586d45-c780-7d3c-8cfb-0ef259a07291" role="banner" data-duration="400">
       <div class="w-layout-blockcontainer padding-global w-container">
         <div class="navbar_container">
-          <a href="/" class="navbar_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" height="Auto" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" class="navbar_logo"></a>
+          <a href="/" class="navbar_logo-link w-nav-brand">
+            <div class="lognos-logo navbar_logo">
+              <svg class="lognos-logo-circle" viewBox="0 0 24 24" fill="none" stroke="#3B82F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10"/>
+              </svg>
+              <span class="lognos-logo-text">lognos</span>
+            </div>
+          </a>
           <nav role="navigation" class="navbar_menu w-nav-menu">
             <div class="navbar_menu-left">
               <a href="/" class="navbar_link w-nav-link">Home</a>
@@ -300,7 +308,14 @@ margin: 0rem !important;
       <div class="w-layout-blockcontainer padding-global padding-section-medium w-container">
         <div class="w-layout-grid footer_top-wrapper">
           <div class="footer_left-wrapper">
-            <a href="/" class="footer_logo-link w-nav-brand"><img src="images/lognos_logo_01.png" loading="lazy" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" width="Auto" alt="" srcset="images/lognos_logo_01-p-500.png 500w, images/lognos_logo_01-p-800.png 800w, images/lognos_logo_01.png 890w" class="footer_logo-image"></a>
+            <a href="/" class="footer_logo-link w-nav-brand">
+              <div class="lognos-logo footer_logo-image">
+                <svg class="lognos-logo-circle" viewBox="0 0 24 24" fill="none" stroke="#3B82F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <circle cx="12" cy="12" r="10"/>
+                </svg>
+                <span class="lognos-logo-text">lognos</span>
+              </div>
+            </a>
           </div>
         </div>
         <div class="footer_bottom-wrapper">
