--- a/utility-pages/terms-and-conditions.html
+++ b/utility-pages/terms-and-conditions.html
@@ -16,6 +16,7 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/lognos.webflow.css" rel="stylesheet" type="text/css">
+  <link href="../css/lognos-logo.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -46,7 +47,14 @@
       <div data-animation="default" class="navbar_component w-nav" data-easing2="ease" fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" data-w-id="cb586d45-c780-7d3c-8cfb-0ef259a07291" role="banner" data-duration="400">
         <div class="w-layout-blockcontainer padding-global w-container">
           <div class="navbar_container">
-            <a href="../index.html" class="navbar_logo-link w-nav-brand"><img src="../images/lognos_logo_01.png" loading="lazy" height="Auto" width="Auto" alt="" srcset="../images/lognos_logo_01-p-500.png 500w, ../images/lognos_logo_01-p-800.png 800w, ../images/lognos_logo_01.png 890w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 890px" class="navbar_logo"></a>
+            <a href="../index.html" class="navbar_logo-link w-nav-brand">
+              <div class="lognos-logo navbar_logo">
+                <svg class="lognos-logo-circle" viewBox="0 0 24 24" fill="none" stroke="#3B82F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <circle cx="12" cy="12" r="10"/>
+                </svg>
+                <span class="lognos-logo-text">lognos</span>
+              </div>
+            </a>
             <nav role="navigation" class="navbar_menu w-nav-menu">
               <div class="navbar_menu-left">
                 <a href="../index.html" class="navbar_link w-nav-link">Home</a>
