Home vid proportions

--- a/index.html
+++ b/index.html
@@ -437,13 +437,13 @@ margin: 0rem !important;
               <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="mainfeatures_tabs w-tabs">
                 <div class="mainfeatures_tabs-menu w-tab-menu">
                   <a data-w-tab="Tab 1" class="mainfeatures_tabs-link w-inline-block w-tab-link w--current">
-                    <div class="text-size-small">INFORMATION TO DATA</div>
+                    <div class="text-size-small">PROCESS</div>
                   </a>
                   <a data-w-tab="Tab 2" class="mainfeatures_tabs-link w-inline-block w-tab-link">
-                    <div class="text-size-small">QUANTIFICATION </div>
+                    <div class="text-size-small">QUANTIFY</div>
                   </a>
                   <a data-w-tab="Tab 3" class="mainfeatures_tabs-link w-inline-block w-tab-link">
-                    <div class="text-size-small">AI ASSISTANT</div>
+                    <div class="text-size-small">MANAGE</div>
                   </a>
                 </div>
                 <div class="mainfeatures_tabs-content w-tab-content">
