Update demo links and enhance dark theme styles across multiple pages

--- a/product.html
+++ b/product.html
@@ -236,10 +236,10 @@ margin: 0rem !important;
               <a href="/" class="navbar_link w-nav-link">Home</a>
               <a href="/product" aria-current="page" class="navbar_link w-nav-link w--current">Product</a>
               <a href="/pricing" class="navbar_link w-nav-link">Pricing</a>
-              <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
             <div class="navbar_menu-right">
-              <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
+              <a href="https://cal.com/facundo.bassi/15min" class="button-icon w-inline-block">
                 <div class="icon-user_embed w-embed">
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
@@ -283,7 +283,7 @@ margin: 0rem !important;
                 </div>
                 <div class="button-group">
                   
-                  <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
+                  <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
                 </div>
               </div>
             </div>
