--- a/utility-pages/style-guide.html
+++ b/utility-pages/style-guide.html
@@ -230,10 +230,10 @@ margin: 0rem !important;
                 <a href="../index.html" class="navbar_link w-nav-link">Home</a>
                 <a href="../product.html" class="navbar_link w-nav-link">Product</a>
                 <a href="../pricing.html" class="navbar_link w-nav-link">Pricing</a>
-                <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
+                <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
               </div>
               <div class="navbar_menu-right">
-                <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
+                <a href="https://cal.com/facundo.bassi/15min" class="button-icon w-inline-block">
                   <div class="icon-user_embed w-embed">
                     <?xml version="1.0" encoding="UTF-8"?>
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
