--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos-logo.css" rel="stylesheet" type="text/css">
+  <link href="css/dark-theme.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -38,6 +39,44 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* Dark theme enhancements */
+.section_hero {
+  background: radial-gradient(ellipse at center, rgba(59, 130, 246, 0.05) 0%, transparent 50%);
+}
+
+.hero_wrapper-main-video {
+  position: relative;
+}
+
+.hero_wrapper-main-video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(circle at 50% 50%, rgba(59, 130, 246, 0.03) 0%, transparent 70%);
+  pointer-events: none;
+  z-index: 1;
+}
+
+.hero_column-wrapper {
+  position: relative;
+  z-index: 2;
+}
+
+.hero_image-wrapper-home-video {
+  position: relative;
+  z-index: 2;
+}
+
+/* Video styling improvements for dark theme */
+.video-accelerated-hero {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+}
+
 /* Accelerate video playback */
 .video-accelerated {
   animation: none !important;
@@ -331,7 +370,7 @@ margin: 0rem !important;
               <a href="index.html" aria-current="page" class="navbar_link w-nav-link w--current">Home</a>
               <a href="product.html" class="navbar_link w-nav-link">Product</a>
               <a href="pricing.html" class="navbar_link w-nav-link">Pricing</a>
-              <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
@@ -352,12 +391,12 @@ margin: 0rem !important;
           <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a06" class="hero_wrapper-main-video">
             <div data-w-id="9f4cb4fe-02b7-c068-e94c-0516fe342a0a" class="hero_column-wrapper">
               <div class="hero_text" style="margin-left: 1rem; margin-right: 1rem;">
-                <h1 class="heading-3"><span class="text-color-highlighted">AI Agents </span> for project <span class="text-color-highlighted">risks management.</span></h1>
+                <h1 class="heading-3"><span class="text-color-highlighted">AI Agents for </span> project controls and risk management</h1>
                 
               </div>
               <div class="button-group"">
 
-                <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button" style="margin-left: 1rem; margin-right: 1rem;">Book a demo</a>
+                <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button" style="margin-left: 1rem; margin-right: 1rem;">Book a demo</a>
               </div>
             </div>
             <div class="hero_image-wrapper-home-video">
@@ -382,25 +421,25 @@ margin: 0rem !important;
 
           </div>
            <div data-w-id="b7cc369f-7df7-2383-00ed-f8ff33075c9e" style="-webkit-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="insights_component">
-              <div class="insights_tile">
+              <div class="insights_tile dark-shadow">
                 <div class="insights_text-wrapper">
                   <div class="heading-style-h1">90%</div>
-                  <div class="text-size-small">Reduction in information processing time </div>
+                  <div class="text-size-small">Reduction in processing time </div>
                 </div>
               </div>
-              <div class="insights_tile">
+              <div class="insights_tile dark-shadow">
                 <div class="insights_text-wrapper">
                   <div class="heading-style-h1">3X</div>
                   <div class="text-size-small">Team knowledge capture</div>
                 </div>
               </div>
-              <div class="insights_tile">
+              <div class="insights_tile dark-shadow">
                 <div class="insights_text-wrapper">
                   <div class="heading-style-h1">80%</div>
-                  <div class="text-size-small">Risk Management time saving</div>
+                  <div class="text-size-small">Project reporting time saving</div>
                 </div>
               </div>
-              <div class="insights_tile">
+              <div class="insights_tile dark-shadow">
                 <div class="insights_text-wrapper">
                   <div class="heading-style-h1">4X</div>
                   <div class="text-size-small">Quantitative risk awareness</div>
@@ -549,7 +588,7 @@ margin: 0rem !important;
                 <p class="text-size-medium">For other questions or to have a one to one demo, contact us.</p>
               </div>
               <div class="button-group align-center">
-                <a href="https://calendly.com/facundo-bassi/lognos_demo" class="button w-button">Contact</a>
+                <a href="https://cal.com/facundo.bassi/15min" class="button w-button">Contact</a>
               </div>
             </div>
           </div>
