--- a/pricing.html
+++ b/pricing.html
@@ -17,6 +17,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/lognos-logo.css" rel="stylesheet" type="text/css">
+  <link href="css/dark-theme.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -37,6 +38,31 @@
   * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Dark theme enhancements for pricing page */
+.section_smallhero {
+  background: radial-gradient(ellipse at center, rgba(59, 130, 246, 0.05) 0%, transparent 50%);
+}
+
+.section_pricing {
+  background: linear-gradient(180deg, transparent 0%, rgba(59, 130, 246, 0.02) 50%, transparent 100%);
+}
+
+/* Form input styling for dark theme */
+.w-input, .w-select {
+  background-color: var(--component-background) !important;
+  border: 1px solid var(--border-subtle) !important;
+  color: var(--text-primary) !important;
+}
+
+.w-input:focus, .w-select:focus {
+  border-color: var(--color-primary) !important;
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1) !important;
+}
+
+.w-input::placeholder, .w-select::placeholder {
+  color: var(--text-secondary) !important;
 }
 </style>
 </head>
@@ -121,11 +147,11 @@ font-size: inherit;
 }
 /* Removes native scrollbar */
 .no-scrollbar {
-    -ms-overflow-style: none;  // IE 10+
-    overflow: -moz-scrollbars-none;  // Firefox
+    -ms-overflow-style: none;  /* IE 10+ */
+    overflow: -moz-scrollbars-none;  /* Firefox */
 }
 .no-scrollbar::-webkit-scrollbar {
-    display: none; // Safari and Chrome
+    display: none; /* Safari and Chrome */
 }
 /* Adds inline flex display */
 .display-inlineflex {
@@ -135,19 +161,17 @@ font-size: inherit;
 .hide {
   display: none !important;
 }
-@media screen and (max-width: 991px), 
-  @media screen and (max-width: 767px), 
-  @media screen and (max-width: 479px){
+@media screen and (max-width: 991px) {
     .hide, .hide-tablet{
       display: none !important;
     }
   }
-  @media screen and (max-width: 767px)
+  @media screen and (max-width: 767px) {
     .hide-mobile-landscape{
       display: none !important;
     }
   }
-  @media screen and (max-width: 479px)
+  @media screen and (max-width: 479px) {
     .hide-mobile{
       display: none !important;
     }
@@ -236,10 +260,10 @@ margin: 0rem !important;
               <a href="index.html" class="navbar_link w-nav-link">Home</a>
               <a href="product.html" class="navbar_link w-nav-link">Product</a>
               <a href="pricing.html" aria-current="page" class="navbar_link w-nav-link w--current">Pricing</a>
-              <a href="https://calendly.com/facundo-bassi/lognos_demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
             <div class="navbar_menu-right">
-              <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button-icon w-inline-block">
+              <a href="https://cal.com/facundo.bassi/15min" class="button-icon w-inline-block">
                 <div class="icon-user_embed w-embed">
                   <?xml version="1.0" encoding="UTF-8"?>
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="100%" viewbox="0 0 16 16">
@@ -285,7 +309,7 @@ margin: 0rem !important;
       <section class="section_pricing">
         <div class="w-layout-blockcontainer padding-global padding-section-bottom w-container">
           <div class="pricing_wrapper">
-            <div data-w-id="778a5150-7d3b-80b8-5555-7319308a2788" style="opacity:0" class="pricing_tile">
+            <div data-w-id="778a5150-7d3b-80b8-5555-7319308a2788" style="opacity:0" class="pricing_tile dark-shadow">
               <div class="pricing_title">
                 <h2 class="heading-style-h4">Starter</h2>
                 <div class="pricing_price">
@@ -293,7 +317,7 @@ margin: 0rem !important;
                 </div>
               </div>
               <div class="pricing_button">
-                <a href="https://calendly.com/facundo-bassi/lognos-onboarding" target="_blank" class="button is-icon w-inline-block">
+                <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-icon w-inline-block">
                   <div class="text-weight-semibold text-size-regular">Get started</div>
                   <div class="icon-embed-xsmall w-embed">
                     <?xml version="1.0" encoding="UTF-8"?>
@@ -339,7 +363,7 @@ margin: 0rem !important;
                 </div>
               </div>
             </div>
-            <div class="pricing_tile is-highlighted">
+            <div class="pricing_tile is-highlighted dark-shadow-lg">
               <div class="pricing_title">
                 <h2 class="heading-style-h4-dark">Small projects</h2>
                 <div class="pricing_price">
@@ -347,7 +371,7 @@ margin: 0rem !important;
                 </div>
               </div>
               <div class="pricing_button">
-                <a href="https://calendly.com/facundo-bassi/lognos-onboarding" class="button is-icon is-invert w-inline-block">
+                <a href="https://cal.com/facundo.bassi/15min" class="button is-icon is-invert w-inline-block">
                   <div class="text-size-regular text-weight-semibold">Get started<br></div>
                   <div class="icon-embed-xsmall is-invert w-embed">
                     <?xml version="1.0" encoding="UTF-8"?>
@@ -399,7 +423,7 @@ margin: 0rem !important;
                 </div>
               </div>
             </div>
-            <div data-w-id="1cb5064a-bb36-8cbb-6514-975b88745c81" style="opacity:0" class="pricing_tile">
+            <div data-w-id="1cb5064a-bb36-8cbb-6514-975b88745c81" style="opacity:0" class="pricing_tile dark-shadow">
               <div class="pricing_title">
                 <h2 class="heading-style-h4">Enterprice</h2>
                 <div class="pricing_price">
@@ -407,7 +431,7 @@ margin: 0rem !important;
                 </div>
               </div>
               <div class="pricing_button">
-                <a href="https://calendly.com/facundo-bassi/30min" target="_blank" class="button is-icon w-inline-block">
+                <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-icon w-inline-block">
                   <div class="text-weight-semibold text-size-regular">Get started<br></div>
                   <div class="icon-embed-xsmall w-embed">
                     <?xml version="1.0" encoding="UTF-8"?>
