Enhance pricing page text color for better visibility and update product page to hide subhero column by default

--- a/pricing.html
+++ b/pricing.html
@@ -347,7 +347,7 @@ margin: 0rem !important;
               <div class="pricing_title">
                 <h2 class="heading-style-h4-dark">Small projects</h2>
                 <div class="pricing_price">
-                  <h3 class="heading-style-h3">$100/mo <span class="text-span-4">per user</span></h3>
+                  <h3 class="heading-style-h3" style="color: white;">$100/mo <span class="text-span-4" style="color: white;">per user</span></h3>
                 </div>
               </div>
               <div class="pricing_button">
