Update footer credit text across multiple pages to remove address number

--- a/product.html
+++ b/product.html
@@ -299,7 +299,7 @@ margin: 0rem !important;
           </div>
         </div>
         <div class="footer_bottom-wrapper">
-          <div class="footer_credit-text">© 2025 Lognos Inc. All rights reserved. 15 Mcmurrich St., Toronto, ON. M5R3M6.</div>
+          <div class="footer_credit-text">© 2025 Lognos Inc. All rights reserved. Toronto, ON. M5R3M6.</div>
           <div class="w-layout-grid footer_legal-list">
             <a href="/utility-pages/style-guide" class="footer_legal-link">Privacy Policy</a>
             <a href="/utility-pages/terms-and-conditions" class="footer_legal-link">Terms of Service</a>
