Update demo links across multiple pages to reflect new URL

--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@ margin: 0rem !important;
               <a href="index.html" class="navbar_link w-nav-link">Home</a>
               <a href="product.html" class="navbar_link w-nav-link">Product</a>
               <a href="pricing.html" class="navbar_link w-nav-link">Pricing</a>
-              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
