--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ margin: 0rem !important;
               <a href="index.html" aria-current="page" class="navbar_link w-nav-link w--current">Home</a>
               <a href="product.html" class="navbar_link w-nav-link">Product</a>
               <a href="pricing.html" class="navbar_link w-nav-link">Pricing</a>
-              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
@@ -396,7 +396,7 @@ margin: 0rem !important;
               </div>
               <div class="button-group"">
 
-                <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button" style="margin-left: 1rem; margin-right: 1rem;">Book a demo</a>
+                <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button" style="margin-left: 1rem; margin-right: 1rem;">Book a demo</a>
               </div>
             </div>
             <div class="hero_image-wrapper-home-video">
@@ -588,7 +588,7 @@ margin: 0rem !important;
                 <p class="text-size-medium">For other questions or to have a one to one demo, contact us.</p>
               </div>
               <div class="button-group align-center">
-                <a href="https://cal.com/facundo.bassi/15min" class="button w-button">Contact</a>
+                <a href="https://cal.com/facundo.bassi/lognos-demo" class="button w-button">Contact</a>
               </div>
             </div>
           </div>
