--- a/product.html
+++ b/product.html
@@ -236,7 +236,7 @@ margin: 0rem !important;
               <a href="index.html" class="navbar_link w-nav-link">Home</a>
               <a href="product.html" aria-current="page" class="navbar_link w-nav-link w--current">Product</a>
               <a href="pricing.html" class="navbar_link w-nav-link">Pricing</a>
-              <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="navbar_link w-nav-link">Demo</a>
+              <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="navbar_link w-nav-link">Demo</a>
             </div>
           </nav>
           <div class="navbar_menu-button w-nav-button">
@@ -263,7 +263,7 @@ margin: 0rem !important;
                 </div>
                 <div class="button-group">
                   
-                  <a href="https://cal.com/facundo.bassi/15min" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
+                  <a href="https://cal.com/facundo.bassi/lognos-demo" target="_blank" class="button is-secondary text-size-regular text-weight-semibold w-button">Book a demo</a>
                 </div>
               </div>
             </div>
