Update Southen LLC link in index.html for improved accessibility and clarity

--- a/index.html
+++ b/index.html
@@ -472,9 +472,13 @@ margin: 0rem !important;
                         <div class="mainfeatures_content">
                           <h3 class="heading-style-h3">Ingest and analyze diverse project data automatically.</h3>
                           <p class="text-size-regular paragraph-4"><br>
-                            The project team interacts with lognos by simple messages and providing risk registers, meeting minutes, schedules, cost reports, and any relevant communication.<br><br>
+                            The project team interacts with Lognos by simple messages and providing risk registers, meeting minutes, schedules, cost reports, and any relevant communication.<br><br>
                               <span class="text-span-2">Lognos Agent</span> processes the information, feeds the risks models, and provides results.<br><br>
-                              <a href="https://southen.co" target="_blank" class="text-span-2" style="font-weight:bold;">Southen LLC</a> SMEs provide any required support to streamline the process, if needed.
+                              <a href="https://southen.co" target="_blank" rel="noopener noreferrer" aria-label="Southen LLC (opens in a new tab)" class="text-span-2">Southen LLC<svg aria-hidden="true" focusable="false" width="0.9em" height="0.9em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 0.08em; vertical-align: -0.1em; display: inline-block;">
+                                <line x1="7" y1="17" x2="17" y2="7"></line>
+                                <polyline points="7 7 17 7 17 17"></polyline>
+                              </svg>
+                            </a> SMEs provide any required support to streamline the process, if needed.
                           </p>
                         </div>
                       </div>
